--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
                     <nav>
-                            <a href="./index.html">WebStudio</a>
-                        <ul>
+                            <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
+                        <ul class="list-link">
                             <li><a href="Studio">Studio</a></li>
                             <li><a href="Portfolio">Portfolio</a></li>
                             <li><a href="Contacts">Contacts</a></li>
                         </ul>
                     </nav>
-                    <address>
+                    <address class="address">
                         <ul>
                             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -87,6 +93,45 @@
                 <p>UI Designer</p>
             </li>
         </ul>
+
+        </section>
+
+        <!--Seccion-4-->
+
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/img-8.jpg" alt="foto Mark" width="360" height="300">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/img-9.jpg" alt="banking App on mobile" width="360" height="300">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-10.jpg" alt="laptop and mobile" width="360" height="300">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/img-11.jpg" alt="interior of the car" width="360" height="300">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img-12.jpg" alt="mobile phone with illustration" width="360" height="300">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/img-13.jpg" alt="a girl with a mobile phone" width="360" height="300">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
 
         </section>
     
