--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-                    <nav>
-                            <a class="logo" href="./index.html">Web<span class="studio">Studio</span></a>
-                        <ul class="list-link">
-                            <li><a href="Studio">Studio</a></li>
-                            <li><a href="Portfolio">Portfolio</a></li>
-                            <li><a href="Contacts">Contacts</a></li>
+    <header class="header">
+        <div class="container">
+                    <nav style="display: flex; align-items: center;">
+                            <a class="header-logo" href="./index.html">Web<span class="studio">Studio</span></a>
+                        <ul class="header-menu-list" style="display: flex;">
+                            <li class="header-menu-item">
+                                <a class="class="header-menu-link" href="Studio">Studio</a></li>
+                            <li class="header-menu-item">
+                                <a class="class="header-menu-link" href="Portfolio">Portfolio</a></li>
+                            <li class="header-menu-item">
+                                <a class="class="header-menu-link" href="Contacts">Contacts</a></li>
                         </ul>
                     </nav>
-                    <address class="address">
-                        <ul>
+                    <address class="address" style="display: flex;">
+                        <ul style="display: flex;">
                             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                         </ul>
-                    </address>
+        </div>        </address>
     </header>
     <main>
 
