--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                             <a class="header-logo" href="./index.html">Web<span class="studio">Studio</span></a>
                         <ul class="header-menu-list" style="display: flex;">
                             <li class="header-menu-item">
-                                <a class="class="header-menu-link" href="Studio">Studio</a></li>
+                                <a href="Studio">Studio</a></li>
                             <li class="header-menu-item">
-                                <a class="class="header-menu-link" href="Portfolio">Portfolio</a></li>
+                                <a href="Portfolio">Portfolio</a></li>
                             <li class="header-menu-item">
-                                <a class="class="header-menu-link" href="Contacts">Contacts</a></li>
+                                <a href="Contacts">Contacts</a></li>
                         </ul>
                     </nav>
                     <address class="address" style="display: flex;">
@@ -30,7 +30,8 @@
                             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                         </ul>
-        </div>        </address>
+                    </address>
+            </div>
     </header>
     <main>
 
