--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </li>
                 <li>
                     <h3 class="title-list">Technologies</h3>
-                    <p class="title-list-item"Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    <p class="title-list-item">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
@@ -143,7 +143,7 @@
 
     <footer class="footer">
 
-        <a class="footer-logo" href="./index.html">Web<sp class="footer-studio">Studio</sp></a>
+        <a class="footer-logo" href="./index.html">Web<span class="footer-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     
     </footer>
