--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
                     <nav>
                             <a class="header-logo" href="./index.html">Web<span class="studio">Studio</span></a>
                         <ul>
-                            <li class="header-menu-item">
-                                <a href="./index.html">Studio</a></li>
-                            <li class="header-menu-item">
-                                <a href="./index.html">Portfolio</a></li>
-                            <li class="header-menu-item">
-                                <a href="./index.html">Contacts</a></li>
+                            <li>
+                                <a class="header-menu-item" href="./index.html">Studio</a></li>
+                            <li>
+                                <a class="header-menu-item" href="./index.html">Portfolio</a></li>
+                            <li>
+                                <a class="header-menu-item" href="./index.html">Contacts</a></li>
                         </ul>
                     </nav>
                     <address class="address">
                         <ul>
-                            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                            <li><a class="address-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a class="address-list" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                         </ul>
                     </address>
     </header>
@@ -78,8 +78,8 @@
         <ul>
             <li>
                 <img src="./images/img(4)(1).jpg" alt="foto Mark" width="264" class="team-fon">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="title-name">Mark Guerrero</h3>
+                <p class="team-profesion">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img(5)(1).jpg" alt="foto Tom" width="264" class="team-fon">
@@ -122,17 +122,17 @@
                 </li>
                 <li>
                     <img src="./images/img-11.jpg" alt="interior of the car" width="360" height="300">
-                    <h3>Taxi Service</h3>
+                    <h3 class="title-list">Taxi Service</h3>
                     <p class="team-profesion">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img-12.jpg" alt="mobile phone with illustration" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
+                    <h3 class="title-list">Screen Illustrations</h3>
                     <p class="team-profesion">Design</p>
                 </li>
                 <li>
                     <img src="./images/img-13.jpg" alt="a girl with a mobile phone" width="360" height="300">
-                    <h3>Online Courses</h3>
+                    <h3 class="title-list">Online Courses</h3>
                     <p class="team-profesion">Marketing</p>
                 </li>
             </ul>
