--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
 
         <ul>
             <li>
-                <img src="./images/img(4)(1).jpg" alt="foto Mark" width="264" class="team-fon">
+                <img class="team-fon" src="./images/img(4)(1).jpg" alt="foto Mark" width="264">
                 <h3 class="title-name">Mark Guerrero</h3>
                 <p class="team-profesion">Product Designer</p>
             </li>
             <li>
-                <img src="./images/img(5)(1).jpg" alt="foto Tom" width="264" class="team-fon">
+                <img class="team-fon" src="./images/img(5)(1).jpg" alt="foto Tom" width="264">
                 <h3 class="title-name">Tom Ford</h3>
                 <p class="team-profesion">Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/img(6)(1).jpg" alt="foto Camila" width="264" class="team-fon">
+                <img class="team-fon" src="./images/img(6)(1).jpg" alt="foto Camila" width="264">
                 <h3 class="title-name">Camila Garcia</h3>
                 <p class="team-profesion">Marketing</p>
             </li>
             <li>
-                <img src="./images/img(7)(1).jpg" alt="foto Daniel" width="264" class="team-fon">
+                <img class="team-fon" src="./images/img(7)(1).jpg" alt="foto Daniel" width="264">
                 <h3 class="title-name">Daniel Wilson</h3>
                 <p class="team-profesion">UI Designer</p>
             </li>
