--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                             <li>
                                 <a class="header-menu-item" href="./index.html">Studio</a></li>
                             <li>
-                                <a class="header-menu-item" href="./index.html">Portfolio</a></li>
+                                <a class="header-menu-item" href="">Portfolio</a></li>
                             <li>
-                                <a class="header-menu-item" href="./index.html">Contacts</a></li>
+                                <a class="header-menu-item" href="">Contacts</a></li>
                         </ul>
                     </nav>
                     <address class="address">
